tests/paczka1/small_fuzzy/94480594.err
Error in line 2: iJ3qMQV A920 25,3
Error in line 6: IOhQbyo A267 75,82
Error in line 10: A79 A267 370,7
Error in line 3: iJ3qMQV A267 51,8
